hphp/hack/test/typecheck/reactive/mutability_inout1.php
<?hh // partial

class A {}

<<__Rx>>
function f(<<__Mutable>> inout A $a): void {
}
